--- a/demo_metal.ipynb
+++ b/demo_metal.ipynb
@@ -587,8 +587,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ancestry eas: 643 cases, 4491 controls (total: 5134)\n",
-      "Ancestry amr: 3634 cases, 37905 controls (total: 41539)\n",
+      "[Case Counts]\n",
       "Validated 2 studies for allergies_ehr \n",
       "\n"
      ]
