--- a/demo_metal.ipynb
+++ b/demo_metal.ipynb
@@ -23,6 +23,7 @@
     "# Load libraries\n",
     "from IPython.display import display, HTML\n",
     "from pathlib import Path\n",
+    "import re\n",
     "import os\n",
     "import subprocess\n",
     "\n",
@@ -81,6 +82,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_file_list(query_dir):\n",
+    "    tmp = subprocess.run(\n",
+    "        f'gsutil ls {query_dir}',\n",
+    "        shell=True,\n",
+    "        capture_output=True\n",
+    "    )\n",
+    "    files = tmp.stdout.decode('utf-8').split('\\n')\n",
+    "    return(files)\n",
+    "\n",
     "def gcs_file_exists(gs_path):\n",
     "    \"\"\"Check if specific GCS file exists using gsutil ls\"\"\"\n",
     "    try:\n",
@@ -96,6 +106,8 @@
     "    \"\"\"\n",
     "    required_file = \"gwas_results.tsv.gz\"\n",
     "    validated_inputs = {}\n",
+    "    \n",
+    "    print(f\"Validating inputs for {trait}\")\n",
     "    \n",
     "    for anc in ancestries:\n",
     "        in_dir = f\"{base_output_folder}/{anc}/{trait}\"\n",
@@ -125,7 +137,7 @@
     "        print(f\"Error: Need at least 2 ancestries for meta-analysis. Found: {len(validated_inputs)}\")\n",
     "        return None\n",
     "    \n",
-    "    print(f\"Validated {len(validated_inputs)} studies for {trait} \\n\")    \n",
+    "    print(f\"{len(validated_inputs)} validated studies available for {trait}\")    \n",
     "    return validated_inputs\n",
     "\n",
     "def extract_sample_sizes(file_path):\n",
@@ -528,45 +540,55 @@
     "    if not validated_inputs:\n",
     "        return None\n",
     "\n",
-    "    out_dir = f'{base_output_folder}/metal/{trait}'\n",
+    "    out_dir = f'{output_folder}/metal/afib_ehr'\n",
+    "    existing_files = set(x.split('/')[-1] for x in get_file_list(out_dir))\n",
     "\n",
-    "    # METAL configuration\n",
-    "    env_dict = {\n",
-    "        'TRAIT': trait,\n",
-    "        'OUT_PREF': trait,\n",
-    "    }\n",
+    "    # Create ancestry suffix from validated inputs\n",
+    "    ancestry_suffix = '_'.join(sorted(validated_inputs.keys()))\n",
     "\n",
-    "    in_dict = {}\n",
-    "    file_list = []\n",
-    "    sample_sizes = []\n",
-    "    \n",
-    "    for i, (anc, file_info) in enumerate(validated_inputs.items(), 1):\n",
-    "        in_dict[f'INPUT_{anc.upper()}'] = file_info['path']\n",
-    "        file_list.append(file_info['path'])\n",
-    "        sample_sizes.append(str(file_info['n_total']))\n",
-    "    \n",
-    "    # Pass file list and sample sizes as comma-separated strings\n",
-    "    env_dict['INPUTS'] = \",\".join(in_dict.keys())\n",
-    "    env_dict['SAMPLE_SIZES'] = ','.join(sample_sizes)  # n_total per ancestry\n",
-    "    env_dict['N_FILES'] = str(len(file_list))\n",
+    "    result_file = f'{trait}_{ancestry_suffix}1.tsv'\n",
+    "    results_exist = {result_file}.issubset(existing_files) # True if result_file is in existing_files\n",
     "\n",
-    "    out_dirs = {\n",
-    "        'OUTPUT_PATH': out_dir\n",
-    "    }\n",
+    "    if not results_exist:\n",
+    "        # METAL configuration\n",
+    "        env_dict = {\n",
+    "            'TRAIT': trait,\n",
+    "            'OUT_PREF': f'{trait}_{ancestry_suffix}',\n",
+    "        }\n",
     "\n",
-    "    return dsub_script(\n",
-    "        label=f'metal_{trait}',\n",
-    "        machine_type='n2d-standard-8',\n",
-    "        envs=env_dict,\n",
-    "        in_params=in_dict,\n",
-    "        out_params=None,\n",
-    "        out_dirs=out_dirs,\n",
-    "        boot_disk=100,\n",
-    "        disk_size=150,\n",
-    "        image=f'{artifact_registry}/bwaxse/metal',\n",
-    "        script='run_metal.sh',\n",
-    "        preemptible=True\n",
-    "    )"
+    "        in_dict = {}\n",
+    "        file_list = []\n",
+    "        sample_sizes = []\n",
+    "\n",
+    "        for i, (anc, file_info) in enumerate(validated_inputs.items(), 1):\n",
+    "            in_dict[f'INPUT_{anc.upper()}'] = file_info['path']\n",
+    "            file_list.append(file_info['path'])\n",
+    "            sample_sizes.append(str(file_info['n_total']))\n",
+    "\n",
+    "        # Pass file list and sample sizes as comma-separated strings\n",
+    "        env_dict['INPUTS'] = \",\".join(in_dict.keys())\n",
+    "        env_dict['SAMPLE_SIZES'] = ','.join(sample_sizes)  # n_total per ancestry\n",
+    "        env_dict['N_FILES'] = str(len(file_list))\n",
+    "\n",
+    "        out_dirs = {\n",
+    "            'OUTPUT_PATH': out_dir\n",
+    "        }\n",
+    "\n",
+    "        dsub_script(\n",
+    "            label=f'metal_{trait}',\n",
+    "            machine_type='n2d-standard-8',\n",
+    "            envs=env_dict,\n",
+    "            in_params=in_dict,\n",
+    "            out_params=None,\n",
+    "            out_dirs=out_dirs,\n",
+    "            boot_disk=100,\n",
+    "            disk_size=150,\n",
+    "            image=f'{artifact_registry}/bwaxse/metal',\n",
+    "            script='run_metal.sh',\n",
+    "            preemptible=True\n",
+    "        )\n",
+    "    else:\n",
+    "        print(f'skipped METAL meta-analysis for {trait}_{ancestry_suffix}\\n Results exist in {out_dir}\\n')"
    ]
   },
   {
