--- a/demo_metal.ipynb
+++ b/demo_metal.ipynb
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -609,47 +609,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Case Counts]\n",
-      "Validated 2 studies for allergies_ehr \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Job properties:\n",
-      "  job-id: metal-alle--bwaxse--xxxx-xxxxx\n",
-      "  job-name: metal-allergies-ehr\n",
-      "  user-id: bwaxse\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "metal-alle--bwaxse--xxxx-xxxxx\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Provider internal-id (operation): projects/project/locations/us-central1/jobs/metal-alle--bwaxse--xxxx-xxxxx-0-0\n",
-      "Launched job-id: metal-alle--bwaxse--xxxx-xxxxx\n",
-      "To check the status, run:\n",
-      "  dstat --provider google-batch --project project --location us-central1 --jobs 'metal-alle--bwaxse--xxxx-xxxxx' --users 'bwaxse' --status '*'\n",
-      "To cancel the job, run:\n",
-      "  ddel --provider google-batch --project project --location us-central1 --jobs 'metal-alle--bwaxse--xxxx-xxxxx' --users 'bwaxse'\n"
+      "Validating inputs for afib_ehr\n",
+      "Missing gwas_results.tsv.gz for ancestry eas\n",
+      "Missing gwas_results.tsv.gz for ancestry amr\n",
+      "Ancestry afr: 1832 cases, 48494 controls (total: 50326)\n",
+      "Ancestry eur: 12309 cases, 171678 controls (total: 183987)\n",
+      "2 validated studies available for afib_ehr\n",
+      "skipped METAL meta-analysis for afib_ehr_afr_eur\n",
+      " Results exist in gs://fc-secure-5314b258-8205-43ab-b5bc-fc383a8fad91/data/saige_gwas/v0/metal/afib_ehr\n",
+      "\n",
+      "Validating inputs for afib_survey\n",
+      "Missing gwas_results.tsv.gz for ancestry eas\n"
      ]
     }
    ],
    "source": [
     "# Ancestry-specific null model\n",
-    "for trait in ['allergies_ehr']:\n",
+    "for trait in traits.keys():\n",
     "    _ = run_metal(\n",
     "        trait=trait,\n",
-    "        ancestries=['eas', 'amr'], #'amr', 'afr', 'eur', \n",
+    "        ancestries=['eas', 'amr', 'afr', 'eur'],\n",
     "        base_output_folder=output_folder\n",
     "    )"
    ]
