--- a/demo_metal.ipynb
+++ b/demo_metal.ipynb
@@ -473,7 +473,7 @@
     "        NR==1 { print $0, \"n_total\"; next }\n",
     "               { print $0, n_total }' > \"${processed_file}\"\n",
     "    \n",
-    "    PROCESSED_FILES+=(\"/processed_file_${i}.tsv\")\n",
+    "    PROCESSED_FILES+=(\"/tmp/processed_file_${i}.tsv\")\n",
     "    \n",
     "    # Verify output\n",
     "    n_lines=$(wc -l < \"${processed_file}\")\n",
