--- a/demo_metal.ipynb
+++ b/demo_metal.ipynb
@@ -540,7 +540,7 @@
     "    if not validated_inputs:\n",
     "        return None\n",
     "\n",
-    "    out_dir = f'{output_folder}/metal/afib_ehr'\n",
+    "    out_dir = f'{output_folder}/metal/{trait}'\n",
     "    existing_files = set(x.split('/')[-1] for x in get_file_list(out_dir))\n",
     "\n",
     "    # Create ancestry suffix from validated inputs\n",
